<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddExperimentSteps" >

    <TextView
        android:id="@+id/tvStepNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/step_no"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/addStepDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvStepNo"
        android:ems="10"
        android:hint="@string/enter_step_desc"
        android:inputType="textMultiLine"
        android:maxLines="4" />

    <EditText
        android:id="@+id/etXmlPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addStepDesc"
        android:layout_below="@+id/addStepDesc"
        android:layout_toLeftOf="@+id/bBrowseXmlPath"
        android:ems="10"
        android:hint="@string/image_path" />

    <EditText
        android:id="@+id/addStepPdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etXmlPath"
        android:layout_below="@+id/etXmlPath"
        android:layout_toLeftOf="@+id/bBrowsePdf"
        android:ems="10"
        android:hint="@string/pdf_path" />

    <EditText
        android:id="@+id/addStepVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etXmlPath"
        android:layout_below="@+id/addStepPdf"
        android:layout_toLeftOf="@+id/bBrowseVideo"
        android:ems="10"
        android:hint="@string/video_path" />

    <Button
        android:id="@+id/bBrowseXmlPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etXmlPath"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/etXmlPath"
        android:text="@string/browse_image"
        android:onClick="selectImage" />

    <Button
        android:id="@+id/bBrowsePdf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bBrowseVideo"
        android:layout_alignLeft="@+id/bBrowseXmlPath"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/addStepPdf"
        android:text="@string/browse_pdf"
        android:onClick="selectPdf" />

    <Button
        android:id="@+id/bBrowseVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/addStepVideo"
        android:layout_alignLeft="@+id/bBrowsePdf"
        android:layout_alignRight="@+id/bBrowsePdf"
        android:layout_alignTop="@+id/addStepVideo"
        android:text="@string/browse_video"
        android:onClick="selectAnimation" />

    <Button
        android:id="@+id/bAddStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:text="@string/add_step_button" />

</RelativeLayout>