<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ImportModule" >

    <EditText
        android:id="@+id/etXmlPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/bBrowseXmlPath"
        android:ems="10"
        android:hint="@string/path_of_xml_file" />

    <Button
        android:id="@+id/bBrowseXmlPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etXmlPath"
        android:layout_alignBottom="@+id/etXmlPath"
        android:layout_alignParentRight="true"
        android:layout_marginRight="22dp"
        android:text="@string/browse_xml_file"
        android:onClick="selectXML" />

    <Button
        android:id="@+id/bImport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etXmlPath"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:onClick="PassXmlFile"
        android:text="@string/b_importXML" />

    <Button
        android:id="@+id/bAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="44dp"
        android:layout_toLeftOf="@+id/bAddExperiment"
        android:text="@string/b_add_category" 
         android:onClick="addNewCategory"  />

    <Button
        android:id="@+id/bAddExperiment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/bImport"
        android:text="@string/b_add_Experiment" 
          android:onClick="addNewExperiment"  />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bImport"
        android:layout_below="@+id/bAddExperiment"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="44dp" >

        <RadioButton
            android:id="@+id/rbHindi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/rbEnglish"
            android:layout_alignTop="@+id/radioGroup1"
            android:layout_toRightOf="@+id/tvSelectLang"
            
            android:text="@string/lan_Marathi"
            android:onClick="changeHindi" />

        <RadioButton
            android:id="@+id/rbEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rbHindi"
            android:layout_centerHorizontal="true"
            android:onClick="changeEnglish"
            android:checked="true"
            android:selectAllOnFocus="false"
            android:text="@string/select_english" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvSelectLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup1"
        android:layout_alignTop="@+id/radioGroup1"
        android:layout_toLeftOf="@+id/radioGroup1"
        android:gravity="center"
        android:text="@string/select_language"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
</RelativeLayout>