<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExperiment" >

    <EditText
        android:id="@+id/etExpDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etExpName"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/enter_exp_desc" />

    <EditText
        android:id="@+id/etExpName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/add_exp_name" />

    <EditText
        android:id="@+id/addStepDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/enter_no_of_step" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bAddExp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/addStepDesc"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_exp_but" />

</RelativeLayout>