<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddCategory" >

    <EditText
        android:id="@+id/etCatDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etExpName"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/enter_cat_desc" />

    <Button
        android:id="@+id/bAddExp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCatDesc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/add_category" />

    <EditText
        android:id="@+id/etExpName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etCatDesc"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/etCatDesc"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/enter_cat_name" />

</RelativeLayout>